# advent

./: .gitignore  flake.nix
2019/: day01.py  day02.py  day03.py  day05.py  day06.py  day07.py  day08.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  flake.nix  intcode.py
2021/: Cargo.toml  flake.nix  get_input  index.html
2021/python/: day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day24.py  day25.py  flake.nix
2021/rust/: Cargo.toml  flake.nix
2021/rust/src/: day07.rs  day10.rs  day12.rs  utils.rs  world2d.rs
2021/src/: day05.rs  day08.rs  day09.rs  day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  evolution.rs  graphics.rs  life.rs  main.rs  mandelbrot.rs  utils.rs  world2d.rs
2022/: Common.hs  Day1.hs  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  get_input  heights.txt  heights2.txt
2023/: all.py  common.py  day01.py  day05.py  day06.py  day07.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day8.py  day9.py  everyday  get_input  viz.py
2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day07_viz.py  day08.py  day09.py  day09_viz.py  day10.py  day11.py  day12.py  flake.nix  (+1 more)
(+39 files in other folders)
