[package]
name = "advent_2021"
version = "0.1.0"
edition = "2021"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
nalgebra = "*"
glam = "0.20.1"
macroquad = "0.3.10"
macroquad-platformer = "0.1.2"
macroquad-tiled = "0.1.1"
oorandom = "11.1.3"
rstar = "0.9.2"
lazy_static = "*"
regex = "*"
array2d = "*"
image = "*"
num = "*"
ndarray = { version = "0.15.0" }
# ndarray = { version = "0.15.0", features = ["blas"] }
# blas-src = { version = "0.8", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }

